--- a/index.ipynb
+++ b/index.ipynb
@@ -1943,33 +1943,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "27cdbbb4",
+   "execution_count": 51,
+   "id": "c83c70ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1938    happy\n",
-       "1961      sad\n",
-       "93      angry\n",
-       "1748     fear\n",
-       "407       sad\n",
-       "Name: Emotion, dtype: object"
+       "(280,)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_test.head()"
+    "y_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "id": "a776990f",
    "metadata": {},
    "outputs": [
@@ -2073,7 +2068,29 @@
    "metadata": {},
    "source": [
     "#### Deployment\n",
-    "Now with both pipelines ready, lets create a class for parsing the data."
+    "Now with both pipelines ready, lets create a class for parsing the data but first lets save our trained model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d4d2ffa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['emotion_model.joblib']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# saving trained svm model; best_svm \n",
+    "joblib.dump(best_svm, 'emotion_model.pkl')\n"
    ]
   },
   {
@@ -2098,35 +2115,93 @@
     "and outputs both results.\n",
     "\"\"\"\n",
     "class SpeakerEmotionDetector:\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, sampling_rate = 16000, n_components = 100):\n",
     "        self.pipeline = Pipeline.from_pretrained('pyannote/speaker-diarization-3.1', use_auth_token='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')\n",
     "        self.emotion_model = joblib.load('emotion_model.pkl')\n",
+    "        self.sampling_rate = sampling_rate\n",
+    "        self.svd = TruncatedSVD(n_components=n_components)\n",
+    "\n",
     "\n",
     "    def split_audio(self, audio_file, segment_length=10):\n",
     "        audio = AudioSegment.from_file(audio_file)\n",
+    "        audio_duration_secs = len(audio) / 1000  # Convert milliseconds to seconds\n",
+    "\n",
+    "        # Check if audio duration is less than 25 seconds\n",
+    "        if audio_duration_secs < 25:\n",
+    "            return [(0, len(audio))]  # Return a single segment covering the entire audio\n",
+    "\n",
     "        segment_ms = segment_length * 1000\n",
-    "        num_segments = np.ceil(len(audio) / segment_ms).astype(int)\n",
+    "        num_segments = np.ceil(audio_duration_secs / segment_length).astype(int)\n",
     "        segments = []\n",
     "        for i in range(num_segments):\n",
     "            start_time = i * segment_ms\n",
     "            end_time = min((i + 1) * segment_ms, len(audio))\n",
-    "            segments.append(audio[start_time:end_time])\n",
+    "            segments.append((start_time, end_time))\n",
     "        return segments\n",
     "\n",
-    "    def process_segment(self, segment, tmp_file):\n",
-    "        segment.export(tmp_file.name, format='wav')\n",
-    "        diarization = self.pipeline(tmp_file.name, min_speakers=1, max_speakers=4)\n",
-    "        print(type(diarization), diarization)\n",
-    "        for segment, speaker_label in diarization.itertracks(yield_label=True):\n",
-    "            emotion = self.emotion_model.predict(segment.crop(filename=tmp_file.name))\n",
-    "            st.write(f\"Speaker {speaker_label}: {emotion}\")\n",
+    "    def preprocess_audio(self, audio_file):\n",
+    "        # Load audio file\n",
+    "        audio, _ = librosa.load(audio_file, sr=None)\n",
+    "\n",
+    "        # Trim leading and trailing silence\n",
+    "        audio = librosa.effects.trim(audio)[0]\n",
+    "\n",
+    "         # Normalize audio\n",
+    "        audio = librosa.util.normalize(audio)\n",
+    "\n",
+    "        # Extract MFCCs (Mel-Frequency Cepstral Coefficients)\n",
+    "        mfccs = librosa.feature.mfcc(y=audio, sr=self.sampling_rate, n_mfcc=13)\n",
+    "\n",
+    "        # Flatten MFCCs to ensure consistent shape\n",
+    "        mfccs_flat = mfccs.flatten()\n",
+    "\n",
+    "        # Calculate other features (pitch, energy, spectral centroid, spectral bandwidth, spectral contrast)\n",
+    "        pitch, _ = librosa.piptrack(y=audio, sr=self.sampling_rate)\n",
+    "        pitch = np.mean(pitch)\n",
+    "        energy = np.mean(librosa.feature.rms(y=audio))\n",
+    "        spectral_centroid = np.mean(librosa.feature.spectral_centroid(y=audio, sr=self.sampling_rate))\n",
+    "        spectral_bandwidth = np.mean(librosa.feature.spectral_bandwidth(y=audio, sr=self.sampling_rate))\n",
+    "        spectral_contrast = np.mean(librosa.feature.spectral_contrast(y=audio, sr=self.sampling_rate))\n",
+    "\n",
+    "        # Combine all features into a single 1D array\n",
+    "        features_combined = np.hstack((mfccs_flat, pitch, energy, spectral_centroid, spectral_bandwidth, spectral_contrast))\n",
+    "\n",
+    "        # Pad features_combined to ensure consistent shape\n",
+    "        max_length = len(features_combined)\n",
+    "        target_length = 2800  # Adjust as needed\n",
+    "        if max_length < target_length:\n",
+    "            padding_width = target_length - max_length\n",
+    "            features_combined = np.pad(features_combined, (0, padding_width), mode='constant')\n",
+    "\n",
+    "        # Apply TruncatedSVD for dimensionality reduction\n",
+    "        features_reduced = np.array(list(features_combined))\n",
+    "\n",
+    "        return features_reduced\n",
     "\n",
     "    def process_audio(self, audio_file):\n",
-    "        segments = self.split_audio(audio_file)\n",
-    "        for i, segment in enumerate(segments):\n",
-    "            with tempfile.NamedTemporaryFile(suffix='.wav', delete=False) as tmp_file:\n",
-    "                self.process_segment(segment, tmp_file)\n",
-    "                os.unlink(tmp_file.name)"
+    "        # Check if the uploaded file is not None\n",
+    "        if audio_file is None:\n",
+    "            st.write(\"No audio file uploaded.\")\n",
+    "            return\n",
+    "\n",
+    "        # Preprocess the audio file\n",
+    "        processed_features = self.preprocess_audio(audio_file)\n",
+    "\n",
+    "        # Truncate the processed features if its size exceeds 100 dimensions\n",
+    "        if processed_features.size > 100:\n",
+    "            processed_features = processed_features[:100]\n",
+    "\n",
+    "        # Reshape the processed features to have at most 100 dimensions\n",
+    "        num_columns = min(100, processed_features.size)\n",
+    "        num_rows = -1 if processed_features.size % num_columns == 0 else -(processed_features.size // num_columns + 1)\n",
+    "        processed_features = processed_features.reshape(num_rows, num_columns)\n",
+    "\n",
+    "        # Perform emotion detection on the processed features\n",
+    "        emotion = self.emotion_model.predict(processed_features)\n",
+    "\n",
+    "\n",
+    "        # Display the detected emotion\n",
+    "        st.write(f\"Emotion detected is: {emotion}\")\n"
    ]
   },
   {
