--- a/index.ipynb
+++ b/index.ipynb
@@ -2073,17 +2073,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "d4d2ffa5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['emotion_model.joblib']"
+       "['emotion_model.pkl']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
