--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "823fd6ee",
    "metadata": {},
    "outputs": [],
@@ -2247,13 +2247,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4e382760",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "##This deployment script is available in a separate file script.py"
+    "A seperate deployment script is available in a separate file script.py run it using `python script.py`."
    ]
   }
  ],
